# nlp-fp

./: .gitignore  run_contrast_set.py
LIT_auto-gen-contrast-set/: requirements.txt
LIT_auto-gen-contrast-set/post-process/: convert_to_negative.py  making_sense_zoy.py  merge_erg_jsonl_zoy.py  process.py  process_zoy.py
ace-0.9.34/: MacOSX.config  Makefile  agenda.c  arbiter.c  bitvec.h  chart.c  chart.h  compile-qc.c  conf.c  conf.h  csaw-callout.c  dag-provenance.c  dag-provenance.h  dag.c  dag.h  dublin.c  edge-vectors.c  exunpack.c  forest-out.c  freeze.c  freeze.h  generalize.c  generate.c  glb.c  hash.c  hash.h  idiom.c  incremental_parser.c  itsdb.c  lattice-mapping.c  lattice-mapping.h  lexical-parse.c  lexical-parse.h  lexicon.c  lexicon.h  libace.c  licenses.c  linenoise.c  lisp.c  lisp.h  (+63 more)
ace-0.9.34-zoy-build/: ace  librepp.la  librepp.so.0  repp
ace-0.9.34/csaw/: csaw.c  (+3 more)
cartography/: requirements_zoy.txt
fp-dataset-artifacts/: .gitignore  command-split-rename.txt  run.py  run_cnli.py  run_merged.py  run_orig.py  run_snli.py  run_with_anli.py
repp-0.2.2/: Makefile.am  Makefile.in  README  TODO  aclocal.m4  configure  configure.ac
repp-0.2.2/CVS/: Entries
repp-0.2.2/include/: Makefile.am  Makefile.in  librepp.h
repp-0.2.2/include/CVS/: Entries  Repository
repp-0.2.2/librepp/: Makefile.am  Makefile.in  load_repp.c  preprocessor.c  symbols.txt  unicode.h
repp-0.2.2/librepp/CVS/: Entries  Repository
repp-0.2.2/m4/CVS/: Entries  Repository  Root
repp-0.2.2/repp/: Makefile.am  Makefile.in  main.c
repp-0.2.2/repp/CVS/: Entries  Repository
(+85 files in other folders)
